--- a/trunk/web/projeler/pisi/pisi/node_19.html
+++ b/trunk/web/projeler/pisi/pisi/node_19.html
@@ -54,20 +54,40 @@
 <H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Alpha)</H3>
-<H5>Source: Bu bölümdeki bilgiler PSPEC dosyasının
-<EM>Source</EM> bölümünden alınır.</H5><!--SEC END -->
+<H3><A NAME="htoc17">4.3</A>&nbsp;&nbsp;İkili PİSİ Paketi</H3>
+<B>PİSİ</B> paketleri ikili bir biçimde sunulacaktır. Bu bölüm paketlerin
+biçemini (format) ve içerdiklerini tanımlamaktadır.<BR>
+<BR>
+<B>PİSİ</B> paketi, içerisinde aşağıdaki bölümler olan bir <EM>PK-ZIP</EM>
+paketidir. Bu sayede paketler standart araçlar ile açılabilir/erişilebilir
+olacaklardır.
+<UL><LI>
+<B>metadata.xml:</B> <B>PSPEC</B> dosyasından alınacak ve üzerine
+eklenecek bilgiler ile oluşturulacak Meta bilgisi
+<LI><B>files.xml:</B> Paket içerisinde bulunan dosyaların bir listesi
+<LI><B>comar/ dizini:</B> ÇOMAR betikleri
+<LI><B>install/ dizini:</B> Paketin kurulu biçimi. Paketin sisteme kurulumu
+bu dizinin belirtilen dizine açılır.
+</UL>
+Alt bölümler ikili PİSİ paketi içerisindeki bileşenleri detaylı olarak
+anlatmaktadır.<BR>
+<BR>
 
-<UL><LI>
-<B>Name</B>
-<LI><B>Homepage</B>
-<LI><B>Summary</B>
-<LI><B>Description</B>
-<LI><B>Packager</B>
-<UL><LI>
-<B>Name</B>
-<LI><B>Email</B>
-</UL>
-</UL>
+<H4><A NAME="htoc18">4.3.1</A>&nbsp;&nbsp;metadata.xml</H4>
+<B>Metadata</B> dosyası bir uygulamanın paket haline geldikten sonra
+yanında taşıyacağı ve paket ile ilgili bilgileri barındıran dosyadır. <BR>
+<BR>
+<B>Metadata</B> dosyası sadece oluşturulan paket ile ilgili bilgileri
+tutmaktan sorumludur. Paket hakkında temel bilgi bu dosyadan alınacaktır.<BR>
+<BR>
+Bu bilgilerin büyük kısmı <B>PSPEC</B> dosyasının işlenmesi sonucu
+ile <B>Metadata</B> dosyasına yazılmaktadır. <B>Metadata PSPEC</B>
+dosyasından alınan bilgilerin yanında kaynak derlendikten ve paket
+oluşturulduktan sonra alınabilecek diğer bilgileri de içerir (paketin
+kurulduktan sonra sistemde kaplayacağı alanın boyutu gibi).<BR>
+<BR>
+<B>Metadata</B> dosyasının içeriği şöyle tanımlanmıştır;<BR>
+<BR>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_18.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_20.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
