--- a/trunk/web/projeler/pisi/pisi/node_24.html
+++ b/trunk/web/projeler/pisi/pisi/node_24.html
@@ -54,11 +54,67 @@
 <H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Alpha)</H3>
-<H3><A NAME="htoc26">4.5</A>&nbsp;&nbsp;Süreçlerin Tarifi</H3>
-Süreç tarifi paket sisteminin en temel görevlerini, tasarımı özetlemek
-amacı ile anlatır.<BR>
+<H4><A NAME="htoc24">4.4.2</A>&nbsp;&nbsp;İkili PİSİ Deposu</H4>
+İkili PİSİ paketlerinin bulundurulduğu depodur. İkili PİSİ Deposu
+da ``Pardus Depo Politikası'' belgesinde anlatıldığı gibi Kaynak
+PİSİ Deposu ile özdeş bir görünüm sergiler. <BR>
 <BR>
-<UL><LI><A HREF='./node_25.html'>Paket Oluşturmak</A></LI><LI><A HREF='./node_26.html'>Paket Kurmak </A></LI><LI><A HREF='./node_27.html'>Paket Kaldırmak</A></LI><LI><A HREF='./node_28.html'>Bağımlılık Çözmek</A></LI></UL><table class='navbar'><tbody><tr><td class='navbut'><a href='node_23.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_25.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+İkili PİSİ Deposu paketlerin istemciler tarafından ulaşılabilir olması
+için bir paket indeksi sağlar. Paketlerin içerisinde bulunan <EM>metadata.xml</EM>
+dosyaları depodaki paketlerden alınarak ve birleştirilerek <B>pisi-index.xml</B>
+isminde bir içerik (depo içeriği) dosyası düzenli aralıklar ile oluşturulacaktır.<BR>
+<BR>
+İçeriğinde mevcut sürümün bilgilerini içerecek bir dosya oluşturulacaktır.
+Bu dosya dağıtımın tüm paketleri için şu bilgileri içerecektir;
+<UL><LI>
+<B>Name</B>
+<LI><B>Summary</B> 
+<LI><B>Description</B>
+<LI><B>Version </B>
+<LI><B>Release </B>
+<LI><B>License</B>
+<LI><B>RuntimeDependencies</B>
+<LI><B>InstallDependencies</B>
+<LI><B>Provides </B>
+<LI><B>History</B>
+<LI><B>Conflicts</B>
+<LI><B>PackageSize </B>
+<LI><B>InstalledSize</B>
+</UL>
+<B>pisi-index.xml</B> dosyasının biçimi XML'dir. Dosyanın doğrulanması
+için kullanılabilecek bilgi <EM>pisi-index.dtd</EM> dosyasında tanımlanmıştır.<BR>
+<BR>
+İkeriki sürümlerde; bu dosya değiştirilmeyecek ve sadece Dağıtım Sürüm
+değiştirdiği zaman yenisi oluşturulacaktır. Aktif sürüm sırasında
+tüm değişiklikler <B>ChangeSet</B> olarak sunulacaktır. İstemci
+bilgisayarlarca çekilecek ve bağımlılık çözme, paket veritabanını
+arama, paket kurma/kaldırma işlemleri bu dosyaların <B>pisi.index</B>
+ile birleştirilmesi yardımı ile yapılacaktır. <BR>
+<BR>
+<B>ChangeSet</B>'ler <B>pisi.index</B> dosyasına yama olarak sunulacaklardır.
+Kolay oluşturulan, az bant genişliği isteyen ve efektif olmaları açısından
+içeriklerini <B>pisi.index</B>'in bir önceki revizyonlarından olan
+farkları arttırımsal (incremental) olarak oluşturacaktır.<BR>
+<BR>
+Kullanıcı bilgisayarında oluşturulacak depo veritabanı <B>pisi.index</B>
+ve <B>Changeset</B>'ler yardımı ile yaratılacaktır. Kullanıcının
+depodaki paketlerin en güncel bilgilerini alabilmesi için depo veritabanını
+düzenli olarak güncellemesi gerekmektedir. Bu işlem bir arkaplan uygulaması
+ile otomatik olarak yaptırılabilir.<BR>
+<BR>
+Depoya eklenecek ikili paketler geliştiriciden alınmayacak, <B>PİSİ</B>
+derleme ortamı tarafından hazırlanıp uygun görülen depoya yerleştirilecektir.
+Böylece geliştiricinin sisteminden kaynaklanabilecek olası problemlerin
+(sürüm farklılıkları, sorunlu ya da güvensiz yazılımlar vs.) önüne
+geçilecektir.<BR>
+<BR>
+<B>PİSİ</B> istemcisi birden fazla depo ile çalışabilecektir. Birden
+fazla depo tanımlanması durumunda öncelikli depo her zaman <B>Pardus
+Resmi Deposu</B> olacaktır. Diğer depolar eşit önceliğe sahip olacaklardır
+ve kullanıcı elle belirtmediği sürece tüm depolarda bulunan paketler
+resmi depodan alınacaktır.<BR>
+<BR>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_23.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_25.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
