--- a/trunk/web/projeler/pisi/pisi/node_30.html
+++ b/trunk/web/projeler/pisi/pisi/node_30.html
@@ -45,7 +45,7 @@
 
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_29.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navhide'><img src='../../../images/nav_forward.png'> Sonraki sayfa</td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_29.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_31.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
 <H1 ALIGN=center>PISI<BR>
@@ -54,20 +54,17 @@
 <H3 ALIGN=center>Barış Metin</H3>
 
 <H3 ALIGN=center>(Alpha)</H3>
-<H2><A NAME="htoc32">5</A>&nbsp;&nbsp;Diğer Yazarlar</H2>
-İsim sırası ile;
-<UL><LI>
-S. Çağlar Onur
-<LI>Eray Özkural
-<LI>Gürer Özen
-<LI>A. Murat Eren
-<LI>Onur Küçük
-</UL>
-<!--BEGIN NOTES document-->
-<HR WIDTH="50%" SIZE=1><DL><DT><A NAME="note1" HREF="node_4.html#text1"><FONT SIZE=5>1</FONT></A><DD><A HREF="http://www.uludag.org.tr/belgeler/okuryazar/okuryazar.html"><TT>http://www.uludag.org.tr/belgeler/okuryazar/okuryazar.html</TT></A>
-</DL>
-<!--END NOTES-->
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_29.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navhide'><img src='../../../images/nav_forward.png'> Sonraki sayfa</td></tr></tbody></table>
+<H3><A NAME="htoc30">4.6</A>&nbsp;&nbsp;Veritabanları</H3>
+İstemci makinadaki paket veritabanı aşağıdaki bölümlere sahip olacaktır.
+Veritabanları <B><EM>BerkeleyDB</EM></B> veritabanlarıdır. Veritabanları,
+/var/db/pisi/ altında bulunmaktadır.<BR>
+<BR>
+PİSİ temel işlevlerini yerine getirmek için birden fazla veri tabanı
+kullanır.<BR>
+<BR>
+TODO: Veritabanlarının açıklamaları gerekiyor.<BR>
+<BR>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_29.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_31.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
